--- a/Frontend/login/dashboard.html
+++ b/Frontend/login/dashboard.html
@@ -525,7 +525,7 @@
     </div>
 
     <div class="content-area">
-      <iframe id="contentFrame" src="content.html" loading="lazy"></iframe>
+      <iframe id="contentFrame" src="index.html" loading="lazy"></iframe>
     </div>
   </div>
 
